[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-output-firewall"
version = "1.0.0"
description = "An OpenEnv-compliant RL environment for detecting toxic, hallucinated, biased, and adversarial LLM outputs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Kottana Indra Kiran"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
